# Repair-Order-Bates-Extraction

./: .gitignore  Dockerfile  Domain_Knoweldge.md  Extra.py  README.md  docker-compose.yml  main.py  pyproject.toml
.streamlit/: config.toml
prompt_registry/: document_analysis_propmt.md
utils/: extraction_utils.py  llm_utils.py  ocr_utils.py
